correcting detail sections on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -116,3 +116,7 @@ h5 {
 	padding-top: 10px;
 	}
 }
+
+summary::marker {
+  display: none;
+}
